# django_cur1

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: settings.py  urls.py
myproject/myproject/: settings.py
service/: admin.py  decorators.py  forms.py  models.py  urls.py  views.py
service/management/commands/: send_mailout.py
service/migrations/: 0001_initial.py  0002_client_newsletter.py  0003_remove_newsletter_user_remove_sendattempt_campaign_and_more.py  0004_rename_mailingattempt_mailingattempts.py  0005_mailing_user_mailingattempts_user.py  0006_alter_recipient_options_alter_mailing_user_and_more.py
service/templates/includes/: inc_menu.html
service/templates/service/: base.html  mailing_attempts.html  mailing_detail.html  mailing_form.html  mailing_list.html  mailing_stats.html  message_confirm_delete.html  message_form.html  message_list.html  recipient_confirm_delete.html  recipient_form.html  recipient_list.html  send_newsletter.html
user/: admin.py  forms.py  models.py  urls.py  views.py
user/management/commands/: csu.py
user/migrations/: 0001_initial.py  0002_emailcampaign.py  0003_user_avatar_user_country_user_phone_alter_user_token.py  0004_delete_emailcampaign.py
user/templates/user/: campaign_stats.html  login.html  register.html  reset_password.html  reset_password_done.html  user_form.html
